Fixed latex script.
* Also wrote a little thought regarding question in 10.2.3.

--- a/lab_report.tex
+++ b/lab_report.tex
@@ -11,7 +11,7 @@
 \usepackage{tocbibind}
 \usepackage{libertine}
 \usepackage{newtxmath}
-\usepackage[t1]{fontenc}
+\usepackage[T1]{fontenc}
 \usepackage[thinspace,amssymb]{SIunits}
 \usepackage{listings, courier, color}
 
