Removed placeholder text from report.
* See template under help/template for hints on report writing

--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -14,6 +14,8 @@
 \usepackage[T1]{fontenc}
 \usepackage[thinspace,amssymb]{SIunits}
 \usepackage{listings, courier, color}
+\graphicspath{{../}}
+\lstset{inputpath={../}}
 
 \usepackage[hidelinks]{hyperref} % Always load last
 
