--- a/report/simulink.tex
+++ b/report/simulink.tex
@@ -1,5 +1,5 @@
 \section{Simulink Diagrams}\label{sec:simulink}
-This section should contain your Simulink diagrams. Just like the plots, these should be in vector format, like in Figure~\ref{fig:simulink}. Make them tidy enough to understand.
+This section should contain your Simulink diagrams.
 
 \subsection{A Simulink Diagram}
 Figure~\ref{fig:simulink} shows a Simulink diagram.
