--- a/report/problem_descr.tex
+++ b/report/problem_descr.tex
@@ -1,33 +1,2 @@
 \section{Problem Description}\label{sec:prob_descr}
-In this section you should describe the lab setup and discuss the model. If you want, you can copy the source code for the model equations:
-\begin{gather}
-	\ddot{e} + K_{3} K_{ed} \dot{e} + K_{3} K_{ep} e = K_{3} K_{ep} e_{c} \label{eq:model_elev} \\
-	\ddot{p} + K_{1} K_{pd} \dot{p} + K_{1} K_{pp} p = K_{1} K_{pp} p_{c} \label{eq:model_pitch} \\
-	\dot{\lambda} = r \label{eq:model_lambda} \\
-	\dot{r} = -K_{2} p \label{eq:model_r} 
-\end{gather}
-Since these equations belong together, it's a good idea to number them like this:
-\begin{subequations}
-\label{eq:model}
-\begin{gather}
-	\ddot{e} + K_{3} K_{ed} \dot{e} + K_{3} K_{ep} e = K_{3} K_{ep} e_{c} \label{eq:model_se_elev} \\
-	\ddot{p} + K_{1} K_{pd} \dot{p} + K_{1} K_{pp} p = K_{1} K_{pp} p_{c} \label{eq:model_se_pitch} \\
-	\dot{\lambda} = r \label{eq:model_se_lambda} \\
-	\dot{r} = -K_{2} p \label{eq:model_se_r} 
-\end{gather}
-\end{subequations}
-You can then both reference individual equations (``the elevation equation \eqref{eq:model_se_elev}'') or reference the entire model (``the linear model \eqref{eq:model}''). Regardless of your choice of software, never hard-code a reference, always use dynamic references. 
-
-You could also align the equations like this:
-\begin{subequations}
-\label{eq:model_al}
-\begin{align}
-	\ddot{e} + K_{3} K_{ed} \dot{e} + K_{3} K_{ep} e &= K_{3} K_{ep} e_{c} \label{eq:model_se_al_elev} \\
-	\ddot{p} + K_{1} K_{pd} \dot{p} + K_{1} K_{pp} p &= K_{1} K_{pp} p_{c} \label{eq:model_se_al_pitch} \\
-	\dot{\lambda} &= r \label{eq:model_se_al_lambda} \\
-	\dot{r} &= -K_{2} p \label{eq:model_se_al_r} 
-\end{align}
-\end{subequations}
-You can consult \citet{Downes2002} for more about writing math.
-
-If you decide to include a figure, that's great. You can in general copy figures from the textbook, the assignement text, or other places. However: ALWAYS CITE THE SOURCE.
+TODO: Se template
