--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -20,15 +20,12 @@
 \studentnumbers{750001, 750002, 750003, and 750004 (Tor Aksel Heirung)}
 \groupnumber{99}
 \date{January 1, 1999}
-
-\includeonly{problem2} %Use this to only compile the chapter you are working on [EL]
 \begin{document}
 
-
-%\makelabreportfrontpage
+\makelabreportfrontpage
 \include{abstract}
 
-%\tableofcontents
+\tableofcontents
 
 \include{intro}
 \include{problem_descr}
