--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -6,7 +6,7 @@
 	\dot{x}&=\begin{bmatrix} \dot{\lambda} \\ \dot{r}  \\ \dot{p} \\ \ddot{p} \end{bmatrix}
 	= A_cx + B_cu
 	\\
-	A_c &= \begin{bmatrix} 0 & 1 & 0 & 0 \\ 0 & 0 & K_2 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & -K_1K_p & -K_1K_{pd} \end{bmatrix}
+	A_c &= \begin{bmatrix} 0 & 1 & 0 & 0 \\ 0 & 0 & -K_2 & 0 \\ 0 & 0 & 0 & 1 \\ 0 & 0 & -K_1K_{pp} & -K_1K_{pd} \end{bmatrix}
 	B_c = \begin{bmatrix}0 \\ 0 \\ 0 \\K_1K_{pp} \end{bmatrix}
 \end{aligned}
 \end{equation}
