Notes for day 4

--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -1,2 +1,8 @@
 \section{Optimal Control of Pitch/Travel and Elevation with and without Feedback}\label{sec:prob4}
 TODO: Se template
+
+\section{Notater for dagen: 16. mars}
+Fikk fmincon til å fungere, med ikke-lineær constraint.
+TODO: Test uten LQR. Lag egen slx hvor vi kopler ut LQR blokka.
+
+TODO: Kjør tuning tester. Juster Q_LQR.
