--- a/report/problem_descr.tex
+++ b/report/problem_descr.tex
@@ -1,2 +1,11 @@
 \section{Problem Description}\label{sec:prob_descr}
-TODO: Se template
+The model used in this report can then be summarized as
+\begin{subequations}
+\label{eq:model_al}
+\begin{align}
+    \ddot{e} + K_{3} K_{ed} \dot{e} + K_{3} K_{ep} e &= K_{3} K_{ep} e_{c} \label{eq:model_se_al_elev} \\
+    \ddot{p} + K_{1} K_{pd} \dot{p} + K_{1} K_{pp} p &= K_{1} K_{pp} p_{c} \label{eq:model_se_al_pitch} \\
+    \dot{\lambda} &= r \label{eq:model_se_al_lambda} \\
+    \dot{r} &= -K_{2} p \label{eq:model_se_al_r}
+\end{align}
+\end{subequations}
