--- a/report/problem3.tex
+++ b/report/problem3.tex
@@ -1,6 +1,15 @@
 \section{Optimal Control of Pitch/Travel with Feedback (LQ)}\label{sec:prob3}
 TODO: Se template
 
+TODO: Figure showing comparison between some tunings.
+TODO: Weight travel hard, and pitch soft, compare.
+
+% MPC. Fordeler og ulemper.
+
+% + Kan innføre harde begrensninger, til enhver tid. LQR støtter ikke det.
+% + Kan potensielt gi en trajektor/pådragssekvens som utfører oppgaven billigere (lavere objektivfunksjonsverdi)
+% - Tungt å beregne.
+
 
 % \section{Notater under dagen}
 % Vi satt Q = diag[1 0 0 0], R = 2, og justerte Q_LQR.
