--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -60,3 +60,7 @@ linear constraint, we can no longer use a QP solver.
 % TODO: Test uten LQR. Lag egen slx hvor vi kopler ut LQR blokka.
 
 % TODO: Kjør tuning tester. Juster Q_LQR.
+
+\subsection{Results}
+
+% TODO: Add figure showing the helicopter following the non-linear constraint. Showing the associated input. Explain why the input looks like it does.
