Wrote problem description. Added lab exercise ref.

--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -42,7 +42,7 @@
 
 \clearpage
 \bibliographystyle{apalike}
-%\bibliography{helibib}\label{sec:bibliography}
+\bibliography{helibib}\label{sec:bibliography}
 
 
 \end{document}
