--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -64,3 +64,17 @@ linear constraint, we can no longer use a QP solver.
 \subsection{Results}
 
 % TODO: Add figure showing the helicopter following the non-linear constraint. Showing the associated input. Explain why the input looks like it does.
+
+% Notation:
+% x_e^*: Computed elevation trajectory
+% x_t^*: Computed travel trajectory
+% u_p^*: Computed pitch setpoint sequence
+% u_e^*: Computed elevation setpoint sequence
+
+
+% Notat
+% Cirka 11 sek ut i simuleringa, så ser vi at det er avvik mellom humpen og faktisk elevation, samtidig som det er avvik mellom travel-bane og faktisk travel. Vi har forsøkt å tune slik at elevation følger humpen tettere, men uten hell.
+
+% Grunnen til dette tror vi er fordi det er en tradeoff i virkeligheten mellom å følge travel-banen og humpen. For å følge humpen bedre, så brukes pitch på en slik måte at det blir større avvik fra travel-banen. I modellen antas at pitch og elevation er fullstendig separerte, og dette problemet skal i teorien ikke oppstå. Men i virkeligheten er det en kobling.
+
+% TODO: Forklar dette fenomenet. Referér til figuren, ved hump-toppen.
