--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -52,17 +52,32 @@ We wish to restrict the helicopter head to move above a bell-shaped curve
 \begin{equation}
     e_k \geq \alpha \exp (-\beta (\lambda_k - \lambda_t)^2 )
 \end{equation}
-for all timesteps $k$ over the solution horizon. Since this is a non-
-linear constraint, we can no longer use a QP solver.
+for all timesteps $k$ over the solution horizon. Since this is a non-linear constraint, we can no longer use a QP solver. Instead, a non-linear solver is needed, and in this case, the MATLAB function fmincon was used with a SQP-type algorithm.
 
-% \section{Notater for dagen: 16. mars}
-% Fikk fmincon til å fungere, med ikke-lineær constraint.
-% TODO: Test uten LQR. Lag egen slx hvor vi kopler ut LQR blokka.
-
+% \section{Notater for dagen: 16. mars} % Fikk fmincon til å fungere, med ikke-lineær constraint. % TODO: Test uten LQR. Lag egen slx hvor vi kopler ut LQR blokka.
 % TODO: Kjør tuning tester. Juster Q_LQR.
+
+\subsection{Objective function}
+For this assignment, the cost function was given in eqation (22) in the assignment text. However, we chose to set up the cost function on a more general form:
+\begin{equation}
+    \phi=\sum(\underline{x}^{T}Q\underline{x}+\underline{u}^{T}R\underline{u})
+\end{equation}
+Here, $Q$ and $R$ are diagonal matrices, with unity weight on $q_{travel}$, $r_{pitch}$ and $r_{pitch}$ as in equation (22) in the assignment text. %This formulation makes it possible to easily put some weight on the other states as well, if deviation in these states should be penalized.
+The position of the weighted state and gains in $Q$ and $R$ respectively, correspond to the position with the same name in x and u. %Skal det være understrek på x og u?
 
 \subsection{Results}
 
+For controlling the helicopter, we ended on a horizon of $N=60$ timesteps, or 15 seconds. This gave us an optimal trajectory that looked much the same as for assignment 3 for pitch and travel. In addition, an elevator trajectory just touching the top of the bell curve constraint was also calculated. The suggested horizon of $N=40$ did not terminate in reasonable time, and was therefore assumed to give an infeasible solution.%!!? or in the very least unpractical to work with
+
+The solution without feedback acted in the same manner as it did in
+assignment/day/part/problem/exercise 3.
+As can be seen i figure (??) !!!!!, the real trajectory of travel and elevation tried to follow the optimal solution, but the effect of not having a perfect model becomes more and more clear as time passes, and at the end of the horizon, the travel drifted away from the solution like in the previous assignment.
+
+Using state feedback LQR, the helicopter managed to follow the calculated trajectory quite good after some tuning. As in
+day/part/assignment 3,
+it was appropriate to weight deviation(s) in travel (and here also elevation) more than deviation in pitch. When the regulator is working on an inaccurate model, it is for the task given more constructive to try to follow the trajectories than the ideal, linearized input gain. This gain will, given the unlinearities of the model, not lead to an optimal trajectory anyway. The result, with different weights on the states of $Q_{LQR}$ can be seen in the following figures. %legge inn typ 3 figurer her med den beste og 2-3dårligere responser og i tillegg skrive på hva de ulike vektene er.
+
+One thing worth noticing is that the trajectory of elevation consequently falls below the constraint at the peak of the constraint. We believe this is due to the fact that our model suggests that there is no link between the model for elevation, and that of pitch. They are in fact linked, and because of this, the regulator doesn't manage to meet both demands perfectly at the same time, and we get a deviation. If the model would include this crossing terms, the result would probably be better. The problem with this approach is that it leads to a non linear objective function, which takes longer time to compute.
 % TODO: Add figure showing the helicopter following the non-linear constraint. Showing the associated input. Explain why the input looks like it does.
 
 % Notation:
