--- a/report/abstract.tex
+++ b/report/abstract.tex
@@ -1,3 +1,20 @@
 \begin{abstract}\addcontentsline{toc}{section}{Abstract}
-TODO: Se template
+%First re-read your paper/report for an overview. Then read each section and condense the information in each down to 1-2 sentences.
+% - Next read these sentences again to ensure that they cover the major points in your paper.
+% - Ensure you have written something for each of the key points outlined above for either the descriptive or informative abstract.
+% - Check the word length and further reduce your words if necessary by cutting out unnecessary words or rewriting some of the sentences into a single, more succinct sentence.
+% - Edit for flow and expression.
+
+The purpose of the helicopter project in TTK4135 is to get experience combining optimization algorithm and control theory on a real world platform. The helicopter will be controlled by the optimal trajectory / input according to the linearized model, both in open-loop and closed-loop linear quadratic regulator. The project also gives an introduction to hardware-in-the-loop (HIL) and automatic generation of code using MatLab with QuaRC.
+
+The main topics of this project is:
+\begin{itemize}
+\item Brief introduction to the model of the helicopter and the assumptions done when linearizing it.
+\item Discretization of the model
+\item Optimal control with cost function and linear inequality constraints
+ \item Applying linear quadratic regulator (LQR) to the optimal trajectory
+ \item Optimal control in two dimensions with non-linear inequality constraints
+\end{itemize}
+
+
 \end{abstract}
