Fixed some syntax bugs

--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -1,10 +1,10 @@
-\documentclass[11pt,a4paper,USenglish]{article} % change ``USenglish'' to ``norsk'' if applicable
-
+\documentclass[11pt,a4paper,USenglish]{article}
 \usepackage{ttk4135LabReport}
 \usepackage{babel}
 \usepackage{amsmath,amssymb}
 \usepackage[latin1]{inputenc}
 \usepackage{graphicx}
+\usepackage[margin=3cm]{geometry}
 \usepackage{epstopdf}
 \usepackage[round]{natbib}
 \usepackage{tocbibind}
@@ -23,6 +23,7 @@
 \begin{document}
 
 \makelabreportfrontpage
+
 \include{abstract}
 
 \tableofcontents
