Added todo in problem descr

--- a/report/problem_descr.tex
+++ b/report/problem_descr.tex
@@ -86,7 +86,11 @@ Second, the model incorporates a PID controller for the elevation, which is assu
     $V_s$                  & Voltage sum, $V_f + V_b$ \\
     $K_{pp},K_{pd},K_{ep},K_{ei}, K_{ed}$ & Controller gains \\
     $T_g$                  & Moment needed to keep the helicopter flying \\
+    % $\lambda^*$
+    % $e_c^*$
     \hline
     \end{tabular}
     \label{tab:variables}
+
+TODO: Variable notation for plots and stuff.
 \end{table}
