Added figures in LaTex

--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -92,6 +92,12 @@ Note that the cost function (\ref{eq:trajectory_cost}) does not take into consid
 \subsection{Results}
 
 % TODO: Add figure showing that the helicopter does NOT end up in our desired final state, xf.
+\begin{figure}[htb]
+	\centering
+    	\makebox[\textwidth][c]{\includegraphics[width=\textwidth]{figures/day2/plot_day2}}
+	\caption{Plot of day 2}
+	\label{fig:day2_plot}
+\end{figure}
 
 % TODO: Explain WHY the helicopter does not reach the final state. Why was the computed trajectory not optimal in the physical sense? etc...
 
