Added project description in bib

--- a/report/helibib.bib
+++ b/report/helibib.bib
@@ -5,3 +5,10 @@ publisher = {Springer},
 title = {{Numerical Optimization}},
 year = {2006}
 }
+
+@misc{LabExercise,
+author = {Jesmani, Mansoureh},
+publisher = {Norwegian University of Science and Technology, Department of Engineering Cybernetics},
+title = {TTK4135 Optimization and Control, Helicopter Lab},
+year = {2015}
+}
