--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -9,6 +9,7 @@
 \usepackage[round]{natbib}
 \usepackage{tocbibind}
 \usepackage{libertine}
+\usepackage{fancyref}
 \usepackage{newtxmath}
 \usepackage[T1]{fontenc}
 \usepackage[thinspace,amssymb]{SIunits}
