Added figure of control hierarchy in latex

--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -26,6 +26,12 @@ this is a model of the basic control layer and the physical layer. In this secti
 we will implement part of the optimization layer.
 
 TODO: Include figure for control hierarchy.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{figures/control_hierarchy}
+	\caption{caption}
+	\label{fig:control_hierarchy}
+\end{figure}
 
 \subsection{Discretization}
 The system dynamics will be implemented as a sequence of constraints in the
