Fixed obsolete command to a new

--- a/report/problem3.tex
+++ b/report/problem3.tex
@@ -16,7 +16,7 @@ This function depend on the system matrices A and B aswell as Q and R, which we 
 0 & 0 & 1 & 0 \\
 0 & 0 & 0 & 1
 \end{bmatrix}
-\qquad\bold{R}=
+\qquad\mathbf{R}=
 \begin{bmatrix}
 1
 \end{bmatrix}
