--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -2,7 +2,7 @@
 \usepackage{ttk4135LabReport}
 \usepackage{babel}
 \usepackage{amsmath,amssymb}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{graphicx}
 \usepackage[margin=3cm]{geometry}
 \usepackage{epstopdf}
@@ -18,17 +18,15 @@
 \lstset{inputpath={../}}
 \usepackage[hidelinks]{hyperref} % Always load last
 
-\studentnumbers{750001, 750002, 750003, and 750004 (Tor Aksel Heirung)}
+\studentnumbers{736698, ??, ??, ?? and ??}
 \groupnumber{99}
-\date{January 1, 1999}
+\date{May 1, 2015}
+
 \begin{document}
 
 \makelabreportfrontpage
-
 \include{abstract}
-
 \tableofcontents
-
 \include{intro}
 \include{problem_descr}
 \include{problem1}
@@ -37,14 +35,11 @@
 \include{problem4}
 \include{discussion}
 \include{conclusion}
-
 \appendix
 \include{matlab}
 \include{simulink}
-
 \clearpage
 \bibliographystyle{apalike}
 \bibliography{helibib}\label{sec:bibliography}
-
 
 \end{document}
