Written something on day1

--- a/report/problem1.tex
+++ b/report/problem1.tex
@@ -1,2 +1,2 @@
 \section{Repetition/Introduction to Simulink/QuaRC}\label{sec:prob1}
-TODO: Se template
+The first part of the project was to confirm that the software and hardware setup at the lab was in good working order. This we tested with a pre-made file where the elevator was hovering at zero elevation (horizontal) and zero pitch. The test was successful with one exception; there was some travel drift caused by the fact that the motor constants are not equal even thought they are treated equal in the software. We did not do anything with this issue since it will be compensated for by the regulator and feedback.
