--- a/report/problem2.tex
+++ b/report/problem2.tex
@@ -24,12 +24,10 @@ The corresponding continuous-time system matrices are
 Referring to the control hierarchy layer in figure (\ref{fig:control_hierarchy}),
 this is a model of the basic control layer and the physical layer. In this section
 we will implement part of the optimization layer.
-
-TODO: Include figure for control hierarchy.
-\begin{figure}[H]
+\begin{figure}[ht]
 	\centering
-	\includegraphics[width=\textwidth]{figures/control_hierarchy}
-	\caption{caption}
+	\includegraphics[width=0.6\textwidth]{figures/control_hierarchy}
+	\caption{Control hierarchy}
 	\label{fig:control_hierarchy}
 \end{figure}
 
