Fixed figure bug in problem description

--- a/report/problem_descr.tex
+++ b/report/problem_descr.tex
@@ -44,7 +44,7 @@ The resulting model has the advantage of being compatible with highly efficient 
 
 Second, the model incorporates a PID controller for the elevation, which is assumed to counteract the constant torque due to gravity, as well as a PD controller for the pitch. The result of this is that our goal in the optimization problem is to compute the setpoints, $e_c$ and $p_c$. Computing the appropriate voltages is left to the internal controllers.
 
-\begin{table}[tbp]
+\begin{table}[ht]
     \centering
     \caption{Parameters and values}
     \begin{tabular}{llll}
@@ -66,7 +66,7 @@ Second, the model incorporates a PID controller for the elevation, which is assu
     \label{tab:parameters}
 \end{table}
 
-\begin{table}[tbp]
+\begin{table}[ht]
     \centering
     \caption{Variables}
     \begin{tabular}{ll}
