--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -4,7 +4,8 @@
 \usepackage{amsmath,amssymb}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
-\usepackage[margin=3cm]{geometry}
+\usepackage{geometry}
+\usepackage{fullpage}
 \usepackage{epstopdf}
 \usepackage[round]{natbib}
 \usepackage{tocbibind}
