Made gitignore ignore .toc files. Fix compile error.

--- a/report/ttk4135LabReport.sty
+++ b/report/ttk4135LabReport.sty
@@ -2,12 +2,19 @@
 
 \RequirePackage{babel}
 \RequirePackage{amsmath,amssymb}
-\RequirePackage[latin1]{inputenc}
+\RequirePackage[utf8]{inputenc}
 \RequirePackage{graphicx}
 \RequirePackage{epstopdf}
 \RequirePackage[round]{natbib}
 \RequirePackage{tocbibind}
 \RequirePackage[thinspace,amssymb]{SIunits}
+\RequirePackage{listings, courier, color}
+\RequirePackage[margin=2.5cm]{geometry}
+% \RequirePackage{fullpage}
+\RequirePackage{libertine}
+\RequirePackage{fancyref}
+\RequirePackage{newtxmath}
+\RequirePackage[T1]{fontenc}
 \RequirePackage{listings, courier, color}
 
 \newcommand{\studentnumbers}[1]{\def \@stnum{#1}}
