--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -60,9 +60,9 @@ for all timesteps $k$ over the solution horizon. Since this is a non-linear cons
 \subsection{Objective function}
 For this assignment, the cost function was the same as in equation (\ref{eq:trajectory_cost}), but with an extra term for penalizing elevation. We chose to set up the cost function on a more general form:
 \begin{equation}
-    \phi=\sum(\underline{x}^{T}Q_{LQR}\underline{x}+\underline{u}^{T}R_{LQR}\underline{u})
+    \phi=\sum(x^{T}Q_{LQR}x+u^{T}R_{LQR}u)
 \end{equation}
-Here, $Q_{LQR}$ and $R{LQR}$ are diagonal matrices, with unity weight on $q_{travel}$, $r_{pitch}$ and $r_{elevation}$, so that it corresponds with the extended state and input vectors (\ref{eq:}. %vil her ha label på inlinefuncen lenger oppe.
+Here, $Q_{LQR}$ and $R{LQR}$ are diagonal matrices, with unity weight on $q_{travel}$, $r_{pitch}$ and $r_{elevation}$, so that it corresponds with the extended state and input vectors (\ref{eq:}). %vil her ha label på inlinefuncen lenger oppe.
 
 %This formulation makes it possible to easily put some weight on the other states as well, if deviation in these states should be penalized.
 
@@ -74,7 +74,7 @@ The solution without feedback acted in the same manner as it did in section (\re
 
 Using state feedback LQR, the helicopter managed to follow the calculated trajectory quite good after some tuning. As in section (\ref{sec:prob3}), it was appropriate to weight deviation(s) in travel (and here also elevation) more than deviation in pitch. When the regulator is working on an inaccurate model, it is for the task given more constructive to try to follow the travel and elevation trajectories rather than the ideal, linearized input trajectory. This input will, given the unlinearities of the model, not lead to an appropriate response for the trajectories. The result, with different weights on the states of $Q_{LQR}$ can be seen in the following figures. %legge inn typ 3 figurer her med den beste og 2-3dårligere responser og i tillegg skrive på hva de ulike vektene er.
 
-One thing worth noticing is that the trajectory of elevation consequently falls below the constraint at the peak of the constraint. We believe this is due to the fact that our model suggests that there is no link between the model for elevation, and that of pitch. They are in fact linked, and because of this, the regulator doesn't manage to meet both demands perfectly at the same time, and we get a deviation. If the model would include this crossing terms, the result would probably be better. The problem with this approach is that it leads to a non linear objective function, which takes longer time to compute.
+One thing worth noticing is that the trajectory of elevation consequently falls below the constraint at the peak of the constraint. We believe this is due to the fact that our model suggests that there is no link between the model for elevation, and that of pitch. They are in fact linked, and because of this, the regulator doesn't manage to meet both demands perfectly at the same time, and we get a deviation. If the model would include this crossing terms, the result would probably be better. The problem with this approach is that it leads to a non linear objective function, which takes longer time to compute for the solver.
 % TODO: Add figure showing the helicopter following the non-linear constraint. Showing the associated input. Explain why the input looks like it does.
 \begin{figure}[htb]
 	\centering
