--- a/report/problem1.tex
+++ b/report/problem1.tex
@@ -1,2 +1,3 @@
 \section{Repetition/Introduction to Simulink/QuaRC}\label{sec:prob1}
-The first part of the project was to confirm that the software and hardware setup at the lab was in good working order. This we tested with a pre-made file where the elevator was hovering at zero elevation (horizontal) and zero pitch. The test was successful with one exception; there was some travel drift caused by the fact that the motor constants are not equal even thought they are treated equal in the software. We did not do anything with this issue since it will be compensated for by the regulator and feedback.
+
+This part is just a repetition, and therefore does not contain any important results. However, the part is important because it is used to test the hardware setup at the lab. This was done using a handed out script that made the helicopter hover at zero elevation and zero pitch. The helicopter suffered from minor drifting as a result of not perfectly tuned motor constants in the handed out script. This was expected and does not really introduce any problem since the drifting would be eliminated as soon as some form of feedback was implemented.
