Fixed error in day3 plots, and added model figures of day 1,2 and 4

--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -1,5 +1,20 @@
 \documentclass[11pt,a4paper,USenglish]{article}
 \usepackage{ttk4135LabReport}
+\usepackage{babel}
+\usepackage{amsmath,amssymb}
+\usepackage[utf8]{inputenc}
+\usepackage{graphicx}
+\usepackage{geometry}
+\usepackage{fullpage}
+\usepackage{epstopdf}
+\usepackage[round]{natbib}
+\usepackage{tocbibind}
+\usepackage{libertine}
+\usepackage{fancyref}
+\usepackage{newtxmath}
+\usepackage[T1]{fontenc}
+\usepackage[thinspace,amssymb]{SIunits}
+\usepackage{listings, courier, color}
 \graphicspath{{../}}
 \lstset{inputpath={../}}
 \usepackage[hidelinks]{hyperref} % Always load last
