--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -4,7 +4,7 @@
 \lstset{inputpath={../}}
 \usepackage[hidelinks]{hyperref} % Always load last
 
-\studentnumbers{736698, ??, ??, ?? and ??}
+\studentnumbers{736698, 742388, ??, ?? and ??}
 \groupnumber{99}
 \date{May 1, 2015}
 
