Removed unused simulink figure.

--- a/report/simulink.tex
+++ b/report/simulink.tex
@@ -2,10 +2,10 @@
 This section should contain your Simulink diagrams.
 
 \subsection{A Simulink Diagram}
-Figure~\ref{fig:simulink} shows a Simulink diagram.
-\begin{figure}[htb]
-	\centering
-		\includegraphics[width = \textwidth]{figures/simulink.pdf}
-	\caption{A Simulink diagram.}
-	\label{fig:simulink}
-\end{figure}
+% Figure~\ref{fig:simulink} shows a Simulink diagram.
+% \begin{figure}[htb]
+% 	\centering
+% 		\includegraphics[width = \textwidth]{figures/simulink.pdf}
+% 	\caption{A Simulink diagram.}
+% 	\label{fig:simulink}
+% \end{figure}
