Fixed merge issue

--- a/report/lab_report.tex
+++ b/report/lab_report.tex
@@ -4,13 +4,8 @@
 \lstset{inputpath={../}}
 \usepackage[hidelinks]{hyperref} % Always load last
 
-<<<<<<< Updated upstream
-\studentnumbers{736698, 742388, ??, ?? and ??}
-\groupnumber{99}
-=======
-\studentnumbers{736698, ??, ??, ?? and ??}
+\studentnumbers{736698, 742388 ??, ?? and ??}
 \groupnumber{17?}
->>>>>>> Stashed changes
 \date{May 1, 2015}
 
 \begin{document}
