--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -4,7 +4,16 @@ rate, $\dot{e}$. We use a non-linear solver to compute an optimal trajectory in 
 and additionally constrain the elevation to avoid a restriction shaped as a bell-curve.
 
 \subsection{State-space formulation}
-The state-vector is extended with the remaining states, $x = \begin{bmatrix} \lambda & r & p & \dot{p} & e & \dot{e} \end{bmatrix}^T$, and the input-vector also contains the elevation setpoint fed to the internal controller, $u = \begin{bmatrix} p_c & e_c \end{bmatrix}^T$. The system is on the usual state-space form (\ref{eq:state_space_axbu}),
+The state-vector is extended with the remaining states, 
+\begin{subequations}
+\label{eq:day4_cost}
+    x = \begin{bmatrix} \lambda & r & p & \dot{p} & e & \dot{e} \end{bmatrix}^T, 
+\end{equation}
+and the input-vector also contains the elevation setpoint fed to the internal controller, 
+\begin{equation}
+    u = \begin{bmatrix} p_c & e_c \end{bmatrix}^T.
+\end{equation}
+The system is on the usual state-space form (\ref{eq:state_space_axbu}),
 with
 \begin{equation}
     \dot{x} =
@@ -61,7 +70,7 @@ for all timesteps $k$ over the solution horizon. Since this is a non-linear cons
 For this assignment, the cost function was the same as in equation (\ref{eq:trajectory_cost}), but with an extra term for penalizing elevation. We chose to set up the cost function on a more general form:
 \begin{equation}
     \phi=\sum(x^{T}Q_{LQR}x+u^{T}R_{LQR}u)
-    \label{eq:day4_cost}
+    
 \end{equation}
 Here, $Q_{LQR}$ and $R_{LQR}$ are diagonal matrices, with unity weight on $q_{travel}$, $r_{pitch}$ and $r_{elevation}$, so that it corresponds with the extended state and input vectors (\ref{eq:day4_cost}). %denne ligningen?
 
