--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -5,7 +5,7 @@ and additionally constrain the elevation to avoid a restriction shaped as a bell
 
 \subsection{State-space formulation}
 The state-vector is extended with the remaining states, 
-\begin{subequations}
+\begin{equation}
 \label{eq:day4_cost}
     x = \begin{bmatrix} \lambda & r & p & \dot{p} & e & \dot{e} \end{bmatrix}^T, 
 \end{equation}
