--- a/report/problem4.tex
+++ b/report/problem4.tex
@@ -1,17 +1,17 @@
 \section{Optimal Control of Pitch/Travel and Elevation with and without Feedback}\label{sec:prob4}
-In this section we extend our model to include the remaining states: elevation, $e$, and elevation
-rate, $\dot{e}$. We use a non-linear solver to compute an optimal trajectory in two dimensions,
-and additionally constrain the elevation to avoid a restriction shaped as a bell-curve.
+In this section we extended our model to include the remaining states: elevation, $e$, and elevation
+rate, $\dot{e}$. We used a non-linear solver to compute an optimal trajectory in two dimensions,
+and additionally constrained the elevation to avoid a restriction shaped as a bell-curve.
 
 \subsection{State-space formulation}
-The state-vector is extended with the remaining states,
+The state-vector was extended with the remaining states,
 \begin{equation}
 \label{eq:day4_cost}
-    x = \begin{bmatrix} \lambda & r & p & \dot{p} & e & \dot{e} \end{bmatrix}^T,
+    x = \begin{bmatrix} \lambda & r & p & \dot{p} & e & \dot{e} \end{bmatrix}^T
 \end{equation}
-and the input-vector also contains the elevation setpoint fed to the internal controller,
+and the elevation setpoint was added to the input-vector,
 \begin{equation}
-    u = \begin{bmatrix} p_c & e_c \end{bmatrix}^T.
+    u = \begin{bmatrix} p_c & e_c \end{bmatrix}^T
 \end{equation}
 The system is on the usual state-space form (\ref{eq:state_space_axbu}),
 with
@@ -41,15 +41,15 @@ with
 \end{equation}
 
 \subsection{Discretization}
-We discretize (\ref{eq:extended_state_space}) using the same method
+We discretized (\ref{eq:extended_state_space}) using the same method
 as in section (\ref{sec:prob2}). That is, an approximation of the
-discrete-time state-space matrices is
+discrete-time state-space matrices was
 \begin{equation}
     A \approx I + hA_c
     \qquad\text{and}\qquad
     B \approx hB_c
 \end{equation}
-where $I$ is now the $6\times6$ identity matrix.
+where $I$ was the $6\times6$ identity matrix.
 
 \subsection{Modelling the restriction}
 A common application of optimal control is to implement restrictions,
@@ -57,21 +57,21 @@ such as avoiding physical objects, as constraints in the optimization
 problem. Such restrictions can not be enforced when using only state-
 feedback controllers.
 
-We wish to restrict the helicopter head to move above a bell-shaped curve
+We wished to restrict the helicopter head to move above the bell-shaped curve
 \begin{equation}
     e_k \geq \alpha \exp (-\beta (\lambda_k - \lambda_t)^2 )
 \end{equation}
-for all timesteps $k$ over the solution horizon. Since this is a non-linear constraint, we can no longer use a QP solver. Instead, a non-linear solver is needed, and in this case, the MATLAB function fmincon was used with a SQP-type algorithm.
+for all timesteps $k$ of the solution horizon. Since this is a non-linear constraint, we could no longer use a QP solver. Instead, a non-linear solver was needed, and in this case, the MATLAB function fmincon was used with a SQP-type algorithm.
 
 % \section{Notater for dagen: 16. mars} % Fikk fmincon til å fungere, med ikke-lineær constraint. % TODO: Test uten LQR. Lag egen slx hvor vi kopler ut LQR blokka.
 % TODO: Kjør tuning tester. Juster Q_LQR.
 
 \subsection{Objective function}
-For this assignment, the cost function was the same as in equation (\ref{eq:trajectory_cost}), but with an extra term for penalizing elevation. We chose to set up the cost function on a more general form:
+For this assignment, the cost function is the same as in equation (\ref{eq:trajectory_cost}), but with an extra term for penalizing elevation. We chose to set up the cost function on a more general form:
 \begin{equation}
-    \phi=\sum(x^{T}Q_{LQR}x+u^{T}R_{LQR}u)
+    \phi=\sum(x^{T}Qx+u^{T}Ru)
 \end{equation}
-Here, $Q_{LQR}$ and $R_{LQR}$ are diagonal matrices, with unity weight on $q_{travel}$, $r_{pitch}$ and $r_{elevation}$, so that it corresponds with the extended state and input vectors (\ref{eq:day4_cost}). %denne ligningen?
+Here, $Q$ and $R$ are diagonal matrices, with unity weight on $q_{travel}$, $r_{pitch}$ and $r_{elevation}$, so that it corresponds with the extended state and input vectors (\ref{eq:day4_cost}). %denne ligningen?
 
 %This formulation makes it possible to easily put some weight on the other states as well, if deviation in these states should be penalized.
 
