Started on discussion

--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -1,2 +1,13 @@
 \section{Discussion}\label{sec:discussion}
 TODO: Se template
+\subsection{Optimal control without feedback}
+When controlling the helicopter with only the estimated optimal input sequence, the linearization and modeling errors becomes to large, and the helicopters behavior will deviate drastically from the estimated response.
+
+\subsection{Optimal control with feedback}
+While the open-loop configuration of optimal control was quite poor, the closed-loop configuration with a LQR was quite promising.
+
+- Limit inputs
+- Avoid areas
+
+\subsection{MPC w/ implicit feedback}
+
